--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,6 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<h1 class="text-center mb-4">@ViewData["Title"]</h1>
+<div class="card">
+    <div class="card-body">
+        <p>Your order data is safe with us. This app is for educational purposes only.</p>
+    </div>
+</div>
