--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,5 +1,6 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
+    height: 100%;
 }
 
 @media (min-width: 768px) {
@@ -18,5 +19,15 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin: 0;
+    background-color: #f8f9fa;
+}
+
+.card {
+    border-radius: 10px;
+}
+
+.footer {
+    background-color: #f1f1f1;
+    border-top: 1px solid #dee2e6;
 }
